--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "guacamole-common-js",
+  "name": "guacamole-common-js-jumpserver",
   "version": "1.1.0-b",
   "description": "The Guacamole javascript client",
   "main": "dist/guacamole-common.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/padarom/guacamole-common-js.git"
+    "url": "git+https://github.com/orangemio/guacamole-common-js-jumpserver.git"
   },
   "files": [
     "dist"
