--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "guacamole-common-js-jumpserver",
-  "version": "1.1.0-b",
+  "version": "1.1.0-c",
   "description": "The Guacamole javascript client",
   "main": "dist/guacamole-common.js",
-  "scripts": {
-    "prepublishOnly": "gulp"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/orangemio/guacamole-common-js-jumpserver.git"
@@ -25,12 +22,12 @@
     "ssh",
     "telnet"
   ],
-  "author": "Christopher Mühl <christopher@padarom.io>",
+  "author": "Orange <orangemtony@gmail.com>",
   "license": "Apache 2.0",
   "bugs": {
     "url": "https://issues.apache.org/jira/browse/GUACAMOLE/"
   },
-  "homepage": "https://github.com/padarom/guacamole-common-js#readme",
+  "homepage": "https://github.com/orangemio/guacamole-common-js-jumpserver",
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
